--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
          <video class="funding-video" width="510" height="285" controls preload="metadata">
             <source src="assets/dojovid.mp4#t=2.000" type="video/mp4">
-            Your browser does not support the video.
+            Your browser does not support the video tag.
 
         </video>
             </div>  
